Update projects.es.json via Unity

--- a/data/projects.es.json
+++ b/data/projects.es.json
@@ -24,7 +24,7 @@
       "3D",
       "Interactividad"
     ],
-    "thumb": "MoonForgePRovisionalLogo.jpg  (pendiente)",
+    "thumb": "assets/uploads/2025/08/moonforgeprovisionallogo-41821113.jpg",
     "url": "#",
     "featured": true,
     "video": null,
