--- a/data/projects.es.json
+++ b/data/projects.es.json
@@ -9,11 +9,19 @@
       "Unity",
       "Educación"
     ],
-    "thumb": "https://images.unsplash.com/photo-1550745165-9bc0b252726f?w=1200&q=80&auto=format&fit=crop",
-    "url": "#",
     "featured": true,
+    "thumb": "https://images.unsplash.com/photo-1550745165-9bc0b252726f?w=1200&q=80&auto=format&fit=crop",
     "video": "assets/sample.mp4",
-    "poster": "assets/samplePoster.jpg"
+    "poster": "assets/samplePoster.jpg",
+    "slug": "juego-webgl-educativo-d276f0",
+    "media": [
+      {
+        "type": "image",
+        "src": "assets/uploads/2025/08/hiroyyofelicidades-99e7b23e.jpg",
+        "poster": null,
+        "alt": null
+      }
+    ]
   },
   {
     "id": "b0f4c04710bc440b887dd35955966d9e",
@@ -24,11 +32,12 @@
       "3D",
       "Interactividad"
     ],
-    "thumb": "assets/uploads/2025/08/moonforgeprovisionallogo-41821113.jpg",
-    "url": "#",
     "featured": true,
+    "thumb": "assets/uploads/2025/08/moonforgeprovisionallogo-41821113.jpg",
     "video": null,
-    "poster": null
+    "poster": null,
+    "slug": "showroom-3d-interactivo-b0f4c0",
+    "media": []
   },
   {
     "id": "67d318cdcb5740eea2d2a4946340b832",
@@ -39,10 +48,11 @@
       "AWS",
       "Web"
     ],
-    "thumb": "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=1200&q=80&auto=format&fit=crop",
-    "url": "#",
     "featured": false,
+    "thumb": "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=1200&q=80&auto=format&fit=crop",
     "video": null,
-    "poster": null
+    "poster": null,
+    "slug": "plataforma-de-digitalizacin-67d318",
+    "media": []
   }
 ]
