--- a/data/projects.es.json
+++ b/data/projects.es.json
@@ -11,8 +11,8 @@
     ],
     "featured": true,
     "thumb": "https://images.unsplash.com/photo-1550745165-9bc0b252726f?w=1200&q=80&auto=format&fit=crop",
-    "video": "assets/sample.mp4",
-    "poster": "assets/samplePoster.jpg",
+    "video": "",
+    "poster": "",
     "slug": "juego-webgl-educativo-d276f0",
     "media": [
       {
