Update projects.es.json via Unity

--- a/data/projects.es.json
+++ b/data/projects.es.json
@@ -14,14 +14,7 @@
     "video": "",
     "poster": "",
     "slug": "juego-webgl-educativo-d276f0",
-    "media": [
-      {
-        "type": "image",
-        "src": "assets/uploads/2025/08/hiroyyofelicidades-99e7b23e.jpg",
-        "poster": null,
-        "alt": null
-      }
-    ]
+    "media": []
   },
   {
     "id": "b0f4c04710bc440b887dd35955966d9e",
